<resources>
    <string name="app_name">My Application</string>

    <string name="displyHint">Enter a Value</string>

    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>

    <string name="clearText">C</string>
    <string name="parenthesesOpenText">(</string>
    <string name="parenthesesCloseText">)</string>
    <string name="divideText">÷</string>
    <string name="multiplyText">×</string>
    <string name="addText">+</string>
    <string name="subtractText">-</string>
    <string name="decimalText">.</string>
    <string name="equalsText">=</string>

    <string name="trigSinText">sin</string>
    <string name="trigCosText">cos</string>
    <string name="trigTanText">tan</string>
    <string name="trigArcSinText">sin<sup><small>-1</small></sup></string>
    <string name="trigArcCosText">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTanText">tan<sup><small>-1</small></sup></string>
    <string name="naturalLogText">ln</string>
    <string name="LogText">log</string>
    <string name="squareRootText">√</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="isPrimeFunctionText">prime</string>

    <string name="backspace">Delete the last character</string>
    <string name="title_activity_limit">LimitActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="enter_expression">Enter expression</string>
    <string name="lower_limit">Lower limit</string>
    <string name="upper_limit">Upper limit</string>
    <string name="solve">Solve</string>
    <string name="delete_desc">Erase</string>
    <string-array name="matrix_operations">
        <item>A * B</item>
        <item>Inverse of A</item>
        <item>Inverse of B</item>
        <item>Transpose A</item>  <!-- New Entry -->
        <item>Transpose B</item>  <!-- New Entry -->
    </string-array>
</resources>