<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="40dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textAlignment="textEnd"
        android:inputType="text"
        android:hint="@string/displyHint"
        android:textColorHint="@color/greyAccent"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/backspace"
            android:textColor="@color/tanAccent"
            app:layout_constraintEnd_toEndOf="@+id/button16"
            app:layout_constraintStart_toStartOf="@+id/button16"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backspace"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sevenText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button19" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/equals_button_background"
            android:text="@string/equalsText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/decimalText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/zeroText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/button8"
            app:layout_constraintStart_toStartOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/addText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/threeText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/twoText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/oneText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/subtractText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sixText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button13"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/fiveText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/fourText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/multiplyText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/nineText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button16"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/divideText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button17"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/parenthesesCloseText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button18"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/eightText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <Button
            android:id="@+id/button19"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button_background"
            android:text="@string/clearText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button20"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/parenthesesOpenText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>